progress, fixed github logo not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,8 @@ nav {
 }
 
 .github {
-  display: block;
+  display: inline-block;
+  height: 20px;
   width: 20px;
   background-position: center;
   background-repeat: no-repeat;
